# Simple-Moving-Average-C---Project

./: CMakeLists.txt  SMA.cpp  SMA.h  StockData.cpp  StockData.h  main.cpp
